# dbmiru

./: AGENTS.md  Cargo.toml  LICENSE  README.md
app/: Cargo.toml
app/src/: main.rs
app/src/widgets/: text_input.rs
assets/fonts/: OFL.txt
core/: Cargo.toml
core/src/: lib.rs  profiles.rs
db/: Cargo.toml
db/src/: lib.rs  postgres.rs
docs/: architecture.md  milestones.md  requirements.md  status.md  ui.md
docs/personal/: memo.md  やったこと.md
src/: db.rs  main.rs  profiles.rs  secrets.rs
src/widgets/: text_input.rs
storage/: Cargo.toml
storage/src/: lib.rs  profiles.rs  secrets.rs
