[package]
name = "dbmiru-app"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dbmiru"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-channel = { workspace = true }
dbmiru-core = { path = "../core" }
dbmiru-db = { path = "../db" }
dbmiru-storage = { path = "../storage" }
directories = { workspace = true }
gpui = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
unicode-segmentation = { workspace = true }
